# walrus

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  TODO.md  aliases.js  publish.sh  search-index.js  settings.html  source-files.js
.github/: dependabot.yml
.github/workflows/: main.yml
benches/: benches.rs
crates/fuzz/: Cargo.toml  before-after.sh
crates/fuzz-utils/: Cargo.toml
crates/fuzz-utils/src/: lib.rs
crates/fuzz/src/: lib.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/tests/: Cargo.toml  build.rs
crates/tests-utils/: Cargo.toml
crates/tests/src/: lib.rs
crates/tests/tests/: custom_sections.rs  function_imports.rs  invalid.rs  ir.rs  round_trip.rs  spec-tests.rs  valid.rs
crates/tests/tests/function_imports/: pets_function_imports.wat
crates/tests/tests/invalid/: if-with-no-else.wat  multi-value-0.wat  multi-value-1.wat  multi-value-2.wat  multi-value-3.wat
crates/tests/tests/ir/: bulk-memory.wat  call-two-params.wat  const.wat  count-to-ten.wat  drop.wat  fac.wat  not-tree-like.wat
crates/tests/tests/round_trip/: anyref1.wat  anyref2.wat  anyref3.wat  anyref4.wat  atomic.wat  block.wat  br-label.wat  br-to-func.wat  br_table.wat  bulk-memory.wat  call-two-params.wat  call.wat  call_2.wat  const.wat  count-to-ten.wat  drop.wat  elem-segments-1.wat  elem-segments-2.wat  elem-segments-3.wat  entry-block-type.wat  fac-multi-value.wat  fac.wat  fuzz-0.wat  gc_keep_used_funcs.wat  gc_keep_used_globals.wat  gc_keep_used_imports.wat  gc_keep_used_memories.wat  gc_keep_used_tables.wat  gc_unused_block.wat  gc_unused_funcs.wat  gc_unused_funcs_2.wat  gc_unused_global.wat  gc_unused_imports.wat  gc_unused_memories.wat  gc_unused_tables.wat  gc_unused_types.wat  global-init.wat  globals.wat  if-no-else.wat  if_else.wat  (+41 more)
crates/tests/tests/valid/: call.wat  const.wat  count-to-ten.wat  fac-multi-value.wat  inc.wat  multi-0.wat  multi-1.wat  multi-2.wat  multi-3.wat  select.wat  stuff-after-loop.wat
examples/: build-wasm-from-scratch.rs  parse.rs  round-trip.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: raw.rs  wasm-opt-ttf.rs  watgen.rs  watmerge.rs
implementors/walrus/: trait.CustomSectionId.js
src/: arena.rs  arena_set.rs  ast.rs  chunk_list.rs  const_expr.rs  const_value.rs  dot.rs  emit.rs  encode.rs  error.rs  function.rs  function_builder.rs  init_expr.rs  lib.rs  module.rs  parse.rs  tombstone_arena.rs  ty.rs  validation_context.rs
src/function/: context.rs  display.rs  graph.rs  mod.rs
src/ir/: matcher.rs  mod.rs  traversals.rs
src/module/: config.rs  custom.rs  data.rs  debug.rs  elements.rs  emit.rs  exports.rs  globals.rs  imports.rs  locals.rs  memories.rs  mod.rs  parse.rs  producers.rs  tables.rs  types.rs
src/passes/: gc.rs  mod.rs  used.rs  validate.rs
src/walrus/: arena_set.rs.html  dot.rs.html  emit.rs.html  encode.rs.html  error.rs.html  function_builder.rs.html  init_expr.rs.html  lib.rs.html  map.rs.html  parse.rs.html  tombstone_arena.rs.html  ty.rs.html
walrus/: all.html  enum.ActiveDataLocation.html  enum.DataKind.html  enum.ErrorKind.html  enum.ExportItem.html  enum.FunctionKind.html  enum.GlobalKind.html  enum.ImportKind.html  enum.InitExpr.html  enum.TableKind.html  enum.ValType.html  index.html  sidebar-items.js  struct.ActiveData.html  struct.Data.html  struct.Element.html  struct.Export.html  struct.Function.html  struct.FunctionBuilder.html  struct.FunctionTable.html  struct.Global.html  struct.IdsToIndices.html  struct.Import.html  struct.IndicesToIds.html  struct.InstrSeqBuilder.html  struct.LocalFunction.html  struct.Memory.html  struct.Module.html  struct.ModuleConfig.html  struct.ModuleCustomSections.html  struct.ModuleData.html  struct.ModuleElements.html  struct.ModuleExports.html  struct.ModuleFunctions.html  struct.ModuleGlobals.html  struct.ModuleImports.html  struct.ModuleLocals.html  struct.ModuleMemories.html  struct.ModuleProducers.html  struct.ModuleTables.html  (+18 more)
walrus-derive/: Cargo.toml
walrus-derive/src/: lib.rs
walrus-tests/: Cargo.toml  build.rs
walrus-tests-utils/: Cargo.toml
walrus-tests-utils/src/: lib.rs
walrus-tests/src/: lib.rs
walrus-tests/tests/: ir.rs  round_trip.rs  spec-tests.rs  valid.rs
walrus-tests/tests/ir/: atomic.wat  block.wat  br_table.wat  call.wat  const.wat  count-to-ten.wat  drop.wat  fac.wat  if_else.wat  inc.wat  loop.wat  mem.wat  memory-size.wat  select.wat  stuff-after-loop-2.wat  stuff-after-loop.wat
walrus-tests/tests/round_trip/: block.wat  br-label.wat  br-table-2.wat  br_table.wat  call.wat  call_2.wat  const.wat  count-to-ten.wat  drop.wat  elem-segments-1.wat  elem-segments-2.wat  fac.wat  gc_keep_used_funcs.wat  gc_keep_used_imports.wat  gc_unused_funcs.wat  gc_unused_funcs_2.wat  gc_unused_global.wat  gc_unused_imports.wat  gc_unused_memories.wat  gc_unused_tables.wat  gc_unused_types.wat  globals.wat  if-no-else.wat  if_else.wat  if_else_2.wat  import-func.wat  import-gc.wat  inc.wat  keep-elem-segments.wat  local-get.wat  loop.wat  loop2.wat  many_funcs.wat  memory-grow.wat  name-section.wat  return.wat  return_2.wat  select.wat  stuff-after-loop-2.wat  stuff-after-loop.wat  (+8 more)
walrus-tests/tests/valid/: block.wat  count-to-ten.wat  drop.wat  fac.wat  if_else.wat  inc.wat  loop.wat  min-fac.wat  select.wat  stuff-after-loop-2.wat
walrus/dot/: index.html
walrus/emit/: struct.IdsToIndices.html
walrus/error/: enum.ErrorKind.html  type.Result.html
walrus/function_builder/: struct.FunctionBuilder.html  struct.InstrSeqBuilder.html
walrus/init_expr/: enum.InitExpr.html
walrus/ir/: enum.AtomicOp.html  enum.AtomicWidth.html  enum.BinaryOp.html  enum.ExtendedLoad.html  enum.Instr.html  enum.InstrSeqType.html  enum.LoadKind.html  enum.LoadSplatKind.html  enum.StoreKind.html  enum.UnaryOp.html  enum.Value.html  fn.dfs_in_order.html  fn.dfs_pre_order_mut.html  index.html  sidebar-items.js  struct.AtomicFence.html  struct.AtomicNotify.html  struct.AtomicRmw.html  struct.AtomicWait.html  struct.Binop.html  struct.Block.html  struct.Br.html  struct.BrIf.html  struct.BrTable.html  (+42 more)
(+114 files in other folders)
