[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"
name = "walrus"
version = "0.4.0"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/rustwasm/walrus"
homepage = "https://github.com/rustwasm/walrus"
documentation = "https://docs.rs/walrus"
description = """
A library for performing WebAssembly transformations
"""

[dependencies]
failure = "0.1.2"
id-arena = { version = "2.2.1", features = ['rayon'] }
leb128 = "0.2.3"
log = "0.4"
rayon = "1.0.3"
walrus-macro = { path = './crates/macro', version = '=0.4.0' }
wasmparser = "0.29"

[dev-dependencies]
env_logger = "0.6"

[workspace]
members = [
    "./crates/fuzz",
    "./crates/macro",
    "./crates/tests",
    "./crates/tests-utils",
]
