[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"
name = "walrus"
version = "0.11.0"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/rustwasm/walrus"
homepage = "https://github.com/rustwasm/walrus"
documentation = "https://docs.rs/walrus"
description = """
A library for performing WebAssembly transformations
"""

[lib]
path = "src/lib.rs"
bench = false

[[bench]]
name = "benches"
path = "benches/benches.rs"
harness = false

[dependencies]
failure = { version = "0.1.5", default-features = false, features = ['std'] }
id-arena = "2.2.1"
leb128 = "0.2.4"
log = "0.4.8"
rayon = { version = "1.1.0", optional = true }
walrus-macro = { path = './crates/macro', version = '=0.11.0' }
wasmparser = "0.37.1"

[features]
parallel = ['rayon', 'id-arena/rayon']

[dev-dependencies]
env_logger = "0.6.2"
criterion = "0.3.0"

[workspace]
members = [
    "./crates/fuzz-utils",
    "./crates/macro",
    "./crates/tests",
    "./crates/tests-utils",
]
