[package]
name = "walrus-tests"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"

[build-dependencies]
walkdir = "2.2.5"
walrus-tests-utils = { path = "../walrus-tests-utils" }

[dev-dependencies]
failure = "0.1.2"
parity-wasm = "0.35.7"
walrus = { path = ".." }
walrus-tests-utils = { path = "../walrus-tests-utils" }
