[package]
name = "walrus-tests"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"

[build-dependencies]
walkdir = "2.2.5"

[dev-dependencies]
failure = "0.1.2"
parity-wasm = "0.36.0"
walrus = { path = ".." }
walrus-tests-utils = { path = "../walrus-tests-utils" }
tempfile = "3"
serde_json = { version = "1", features = ['preserve_order'] }
serde = { version = "1", features = ['derive'] }

[lib]
doctest = false
test = false
