[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"
name = "walrus-fuzz"
version = "0.1.0"
publish = false

[dependencies]
rand = { version = "0.7", features = ['small_rng'] }
tempfile = "3.0.5"

[dependencies.walrus]
path = "../.."

[dependencies.walrus-tests-utils]
path = "../tests-utils"
