[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"
name = "walrus-fuzz"
version = "0.1.0"
publish = false

[dependencies]
rand = { version = "0.7.0", features = ['small_rng'] }
tempfile = "3.1.0"
failure = "0.1.5"
env_logger = "0.6.2"

[dependencies.walrus]
path = "../.."

[dependencies.walrus-tests-utils]
path = "../tests-utils"
