[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"
name = "walrus-macro"
version = "0.11.0"
license = "MIT/Apache-2.0"
categories = ["wasm"]
repository = "https://github.com/rustwasm/walrus/tree/crates/macro"
homepage = "https://github.com/rustwasm/walrus"
documentation = "https://docs.rs/walrus-macro"
description = """
Internal macros used by the `walrus` crate, not for public consumption.
"""

[dependencies]
heck = "0.3.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ['extra-traits'] }

[lib]
proc_macro = true
