[package]
name = "walrus-tests"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
edition = "2018"
publish = false

[build-dependencies]
walkdir = "2.2.9"

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.8.1"
serde = { version = "1.0.99", features = ['derive'] }
serde_json = { version = "1.0.40", features = ['preserve_order'] }
tempfile = "3.1.0"
walrus = { path = "../.." }
walrus-tests-utils = { path = "../tests-utils" }
wasmprinter = "=0.2.78"
wat = "1.0.85"

[features]
parallel = ['walrus/parallel']

[lib]
doctest = false
test = false
